# the_email_message_integration_process

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
the_message_integration_project/: manage.py
the_message_integration_project/emails/: consumers.py  forms.py  models.py  routing.py  urls.py  utils.py  views.py
the_message_integration_project/emails/migrations/: 0001_initial.py  0002_remove_emailmessage_attachments_attachments.py  0003_emailaccount_provider.py  0004_emailmessage_message_id.py  0005_alter_emailmessage_receive_date.py  0006_alter_emailaccount_provider.py
the_message_integration_project/static/css/: style.css
the_message_integration_project/static/js/: email_script.js
the_message_integration_project/templates/: add_email.html  base.html  email_messages.html
the_message_integration_project/templates/includes/: footer.html  header.html
the_message_integration_project/templates/registration/: logged_out.html  login.html  password_change_done.html  registration_form.html
the_message_integration_project/the_message_integration_project/: asgi.py  settings.py  urls.py  wsgi.py
